- исправление замечаний, которые были найдены в PR